Version 15.UNKNOWN (master)
===========================

Desktop version:

* Thumbnailer for GNOME is now only built if CMake option
  PENTOBI_BUILD_THUMBNAILER is set (defaults to ON)

Android version:

* New theme with colors optimized for colorblindness.


Version 15.0.UNKNOWN (v15-fixes)
================================

Desktop version:

* Avoid duplicate menu mnemonics and fixed minor errors in translations.

Android version:

* Board was not updated if it became empty after opening a file failed.
* Running computer move was not aborted after opening a file failed.
* Disable menu item Analyze Game if game has no moves.
* Show a meaningful error message if startup fails due to low memory.
* Show a warning if current game has unsaved changes before opening
  a file from clipboard.


Version 15.0 (28 Jun 2018)
==========================

General:

* New UI translations: French, Norsk bokmål (thanks to Allan Nordhøy)
* Added a workaround for a compiler issue with GCC 7/8, which slowed
  down the startup time of Pentobi.
* Disable menu item "Keep Only Position" if board is empty.

Android version:

* The minimum required Qt version is now 5.11.
* Games table in rating dialog did not show the correct level used.
* Saved files should now immediately be visible from computers connecting
  with the Android device via MTP (might not work on all devices).
* An error message is now shown when an invalid loaded SGF file causes
  a problem later (e.g. invalid move property value in a side variation).


Version 14.1 (03 Jan 2018)
==========================

General:

* Fixed a potential race condition during move generation.
* Reduced maximum memory usage to a quarter instead of a third of the
  total system memory.
* Made unit tests work again.

Android version:

* Migrated QML files from Qt 5.6 to Qt >=5.7.
* The binary translation files are now automatically created by the
  qmake project file.


Version 14.0 (26 Oct 2017)
==========================

General:
