@@ -28,16 +28,6 @@ if (PENTOBI_BUILD_GUI)
   add_subdirectory(convert)
   add_subdirectory(libpentobi_gui)
   add_subdirectory(pentobi)
-  if (PENTOBI_BUILD_THUMBNAILER OR PENTOBI_BUILD_KDE_THUMBNAILER)
-    add_subdirectory(libpentobi_thumbnail)
-  endif()
-  if(PENTOBI_BUILD_THUMBNAILER)
-      add_subdirectory(pentobi_thumbnailer)
-  endif()
-  if(PENTOBI_BUILD_KDE_THUMBNAILER)
-    add_subdirectory(libpentobi_kde_thumbnailer)
-    add_subdirectory(pentobi_kde_thumbnailer)
-  endif()
 endif()
 
 if (PENTOBI_BUILD_QML)
