@@ -1,23 +1,0 @@
-find_package(ECM REQUIRED NO_MODULE)
-set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
-
-include(KDEInstallDirs)
-include(KDECompilerSettings)
-include(KDECMakeSettings)
-
-find_package(KF5 REQUIRED COMPONENTS KIO)
-
-include_directories(${CMAKE_SOURCE_DIR}/src)
-
-add_library(pentobi-thumbnail MODULE
-  PentobiThumbCreator.h
-  PentobiThumbCreator.cpp
-)
-
-target_link_libraries(pentobi-thumbnail
-  pentobi_kde_thumbnailer
-  KF5::KIOWidgets
-)
-
-install(TARGETS pentobi-thumbnail DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES pentobi-thumbnail.desktop DESTINATION ${SERVICES_INSTALL_DIR})
